--- a/_pugfiles/header.pug
+++ b/_pugfiles/header.pug
@@ -11,6 +11,9 @@ mixin nav-content()
 	+nav-content()
 
 header
+	video(poster="/assets/img/mlky_6.jpg", autoplay="true", loop)
+		source(src="/assets/img/mlky_6.mp4")
+		
 	.header-position
 		h1.logo Spacenomad-Design
 
