--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -453,7 +453,7 @@ body {
   -webkit-tap-highlight-color: #FFF498; }
 
 body {
-  background: #F6F6F8;
+  background: #000000;
   font-size: 14px;
   line-height: 1.6;
   font-family: 'space_monoregular' sans-serif;
@@ -498,6 +498,14 @@ body {
   width: 200px;
   background: white;
   padding: 30px 0; }
+  .home-wrap header video {
+    height: 100%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    position: fixed;
+    top: 0;
+    -webkit-filter: contrast(90%);
+            filter: contrast(90%); }
   .home-wrap header .header-position {
     position: fixed;
     top: 30px;
@@ -527,16 +535,19 @@ body {
     padding: 0 30px 0 0;
     text-align: right; }
   .home-wrap header .site-nav li {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    background-color: rgba(0, 0, 0, 0.25); }
+    .home-wrap header .site-nav li:hover {
+      background-color: rgba(0, 0, 0, 0.45); }
     .home-wrap header .site-nav li:last-child {
       margin-bottom: 0; }
   .home-wrap header .site-nav a {
-    color: black; }
+    color: #e0e0e0; }
   .home-wrap header .email-link {
     display: block;
     text-align: right;
     padding-right: 30px;
-    color: black; }
+    color: #e0e0e0; }
   .home-wrap header .mobile-nav-toggle {
     cursor: pointer;
     display: none;
@@ -606,6 +617,8 @@ body {
     top: 0;
     right: 0;
     left: 0; }
+    .home-wrap header video {
+      display: none; }
     .home-wrap header .header-position {
       position: relative;
       top: auto;
@@ -789,7 +802,8 @@ section.header .copywrite {
 
 .home-sections {
   -ms-flex: 1;
-      flex: 1; }
+      flex: 1;
+  z-index: 1; }
   .home-sections section {
     padding: 50px 0; }
   .home-sections .flex {
