--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -456,7 +456,7 @@ body {
   background: #000000;
   font-size: 14px;
   line-height: 1.6;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Space Mono', monospace;
   color: #2E2D33;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
