--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -88,7 +88,7 @@ body
   background: $bg-color
   font-size: 14px
   line-height: 1.6
-  font-family: 'space_monoregular' sans-serif
+  font-family: 'Space Mono', monospace;
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
