--- a/_pugfiles/section-portfolio.pug
+++ b/_pugfiles/section-portfolio.pug
@@ -7,4 +7,4 @@ section.header
 section.portfolio
 	.flex
 		.col-2
-			img(src="assets/img/Website-1.png" width="95%")
+			img(src="assets/img/website-1.png" width="95%")
